# hello-world-conan

./: .gitignore  CMakeLists.txt  README.md  conan-cmake-azure-pipeline.yml  conan-install-azure-pipeline.yml  conanfile.txt
cmake/: conan.cmake  conan_options.cmake  conan_run.cmake
documentation/: conan-cmake.md  conan-install.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/libs/Hello/: CMakeLists.txt
src/libs/Hello/include/: Hello.h
src/libs/Hello/src/: Hello.cpp
src/libs/PocoTimer/: CMakeLists.txt
src/libs/PocoTimer/include/: PocoTimer.h
src/libs/PocoTimer/src/: PocoTimer.cpp
